k8s/base/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
    component: api-server
    app.kubernetes.io/name: backend
    app.kubernetes.io/component: api-server
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default": "backend-backendconfig"}'
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: backend
    component: api-server
  sessionAffinity: None
